[gd_scene load_steps=6 format=2]

[ext_resource path="res://components/Mouse.gd" type="Script" id=1]
[ext_resource path="res://components/InteractableArea.gd" type="Script" id=2]
[ext_resource path="res://assets/3D/meshes/mesh_mouse.tres" type="ArrayMesh" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.5, 2, 3 )

[sub_resource type="Animation" id=2]
resource_name = "mouse"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("MouseMesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1.2, 1.6, 1.9, 2.5, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -1.55815, 0, -4.96249 ), Vector3( -2.68115, 0, -2.41687 ), Vector3( -2.34867, 0, -0.507644 ), Vector3( -2.34867, 0, -0.507644 ), Vector3( -0.121908, -2.72478e-007, 0.298585 ), Vector3( 1.54817, -4.76837e-007, 0.0664493 ), Vector3( 1.54817, -4.76837e-007, 0.0664493 ), Vector3( 1.97846, -4.76837e-007, -2.64525 ), Vector3( 1.67205, -4.76837e-007, -4.45305 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MouseMesh:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.2, 1.9, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 70.7543, 0 ), Vector3( 0, 137.133, 0 ), Vector3( 0, 137.133, 0 ), Vector3( 0, 230, 0 ), Vector3( 0, 230, 0 ), Vector3( 0, 270, 0 ) ]
}

[node name="Mouse" type="Spatial"]
script = ExtResource( 1 )

[node name="InteractableArea" type="Area" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )
interact_id = 5

[node name="CollisionShape" type="CollisionShape" parent="InteractableArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 2, 0 )
shape = SubResource( 1 )

[node name="MouseMesh" type="MeshInstance" parent="."]
transform = Transform( 1.19249e-008, 0, -1, 0, 1, 0, 1, 0, 1.19249e-008, 1.67205, -4.76837e-007, -4.45305 )
visible = false
mesh = ExtResource( 3 )
material/0 = null

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/mouse = SubResource( 2 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_mouse_finished"]
